--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,12 @@
 <package format="3">
-  <name>robosoccer_perception</name>
+  <name>perception</name>
   <version>0.0.1</version>
   <description>Perception nodes for RoboSoccer</description>
   <maintainer email="uwrobosoccer@gmail.com">UWRS</maintainer>
   <license>MIT</license>
-  <buildtool_depend>ament_python</buildtool_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
