--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/robosoccer_perception
+script_dir=$base/lib/perception
 [install]
-install_scripts=$base/lib/robosoccer_perception
+install_scripts=$base/lib/perception
